--- a/LibraryManagement/Views/Catalog/Detail.cshtml
+++ b/LibraryManagement/Views/Catalog/Detail.cshtml
@@ -32,7 +32,7 @@
             }
             @if (Model.Status == "Available")
             {
-                <p> <a id="itemPatron" class="btn btn-lg btn-info" role="button" asp-controller="Catalog" asp-action="CheclOut" asp-route-id="@Model.AssetId">Check Out</a></p>
+                <p> <a id="itemPatron" class="btn btn-lg btn-info" role="button" asp-controller="Catalog" asp-action="CheckOut" asp-route-id="@Model.AssetId">Check Out</a></p>
             }
         </div>
         <div class="col-md-4 detailInfo">
@@ -51,5 +51,50 @@
                 </tr>
             </table>
         </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-6">
+        <h4>Checkout History</h4>
+        <table class="table table-bordered table-hover table-condensed">
+            <thead>
+                <tr>
+                    <th>Date Loaned</th>
+                    <th>Date Returned</th>
+                    <th>Card Id</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var checkout in Model.CheckoutHistories)
+                {
+                    <tr>
+                        <td>@checkout.CheckedOut</td>
+                        <td>@checkout.CheckedIn</td>
+                        <td>@checkout.LibraryCard.Id</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    <div class="col-lg-6">
+        <h4>Current Holds</h4>
+        <table class="table table-bordered table-hover table-condensed">
+            <thead>
+                <tr>
+                    <th>Hold Placed</th>
+                    <th>Patron </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var currenthold in Model.CurrentHolds)
+                {
+                    <tr>
+                        <td>@currenthold.HoldPlaced</td>
+                        <td>@currenthold.PatronName</td>
+                      
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
 </div>
